[MODFQMMGR-1023] Add hash verification for entities when retrieving query contents (pt 2)